# storage/api-docs/api-docs.json
@@ -137,7 +137,7 @@
                         "description": "Blog id",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
                         }
                     }
                 ],
@@ -182,7 +182,7 @@
                         "description": "Blog id",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
                         }
                     }
                 ],
@@ -200,6 +200,63 @@
                 "responses": {
                     "201": {
                         "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/blog/{blog}/image": {
+            "post": {
+                "tags": [
+                    "Blogs"
+                ],
+                "summary": "Update image for blog",
+                "description": "Returns blog status",
+                "operationId": "imageBlog",
+                "parameters": [
+                    {
+                        "name": "blog",
+                        "in": "path",
+                        "description": "Blog id",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "$ref": "#/components/schemas/BaseModel/properties/uploads"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BaseModel/properties/booleanResult"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Bad Request"
@@ -365,6 +422,63 @@
                 }
             }
         },
+        "/equipment/{equipment}/image": {
+            "post": {
+                "tags": [
+                    "Equipments"
+                ],
+                "summary": "Update image for equipment",
+                "description": "Returns equipment status",
+                "operationId": "imageEquipment",
+                "parameters": [
+                    {
+                        "name": "equipment",
+                        "in": "path",
+                        "description": "Equipment id",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "$ref": "#/components/schemas/BaseModel/properties/uploads"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BaseModel/properties/booleanResult"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/services": {
             "get": {
                 "tags": [
@@ -517,6 +631,63 @@
                 }
             }
         },
+        "/services/{service}/image": {
+            "post": {
+                "tags": [
+                    "Services"
+                ],
+                "summary": "Update image for service",
+                "description": "Returns service status",
+                "operationId": "imageService",
+                "parameters": [
+                    {
+                        "name": "service",
+                        "in": "path",
+                        "description": "Service id",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "$ref": "#/components/schemas/BaseModel/properties/uploads"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BaseModel/properties/booleanResult"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/subservices": {
             "get": {
                 "tags": [
@@ -656,6 +827,63 @@
                 "responses": {
                     "201": {
                         "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/subservices/{subservice}/image": {
+            "post": {
+                "tags": [
+                    "Subservices"
+                ],
+                "summary": "Update image for subservice",
+                "description": "Returns subservice status",
+                "operationId": "imageSubservice",
+                "parameters": [
+                    {
+                        "name": "subservice",
+                        "in": "path",
+                        "description": "Subservice id",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/BaseModel/properties/id"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "$ref": "#/components/schemas/BaseModel/properties/uploads"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BaseModel/properties/booleanResult"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Bad Request"
@@ -954,6 +1182,9 @@
                     "id": {
                         "$ref": "#/components/schemas/Blog/properties/id"
                     },
+                    "image": {
+                        "$ref": "#/components/schemas/Blog/properties/image"
+                    },
                     "createdAt": {
                         "$ref": "#/components/schemas/Blog/properties/created_at"
                     },
@@ -1029,6 +1260,9 @@
                 "properties": {
                     "id": {
                         "$ref": "#/components/schemas/Equipment/properties/id"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/Equipment/properties/image"
                     },
                     "createdAt": {
                         "$ref": "#/components/schemas/Equipment/properties/created_at"
@@ -1106,6 +1340,9 @@
                     "id": {
                         "$ref": "#/components/schemas/Service/properties/id"
                     },
+                    "image": {
+                        "$ref": "#/components/schemas/Service/properties/image"
+                    },
                     "createdAt": {
                         "$ref": "#/components/schemas/Service/properties/created_at"
                     },
@@ -1181,6 +1418,9 @@
                 "properties": {
                     "id": {
                         "$ref": "#/components/schemas/Subservice/properties/id"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/Subservice/properties/image"
                     },
                     "createdAt": {
                         "$ref": "#/components/schemas/Subservice/properties/created_at"
@@ -1273,6 +1513,24 @@
                         "format": "string",
                         "readOnly": "true",
                         "example": "en"
+                    },
+                    "image": {
+                        "title": "image",
+                        "type": "string",
+                        "format": "string",
+                        "readOnly": "true",
+                        "example": "https://example.com/uploads/image1.jpg"
+                    },
+                    "uploads": {
+                        "title": "uploads",
+                        "type": "string",
+                        "format": "binary"
+                    },
+                    "booleanResult": {
+                        "title": "boolean",
+                        "type": "boolean",
+                        "format": "boolean",
+                        "example": "true"
                     }
                 },
                 "type": "object",
@@ -1291,6 +1549,9 @@
                     },
                     "updated_at": {
                         "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/BaseModel/properties/image"
                     }
                 },
                 "type": "object",
@@ -1337,6 +1598,9 @@
                     },
                     "updated_at": {
                         "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/BaseModel/properties/image"
                     }
                 },
                 "type": "object",
@@ -1383,6 +1647,9 @@
                     },
                     "updated_at": {
                         "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/BaseModel/properties/image"
                     }
                 },
                 "type": "object",
@@ -1432,6 +1699,9 @@
                     },
                     "updated_at": {
                         "$ref": "#/components/schemas/BaseModel/properties/updated_at"
+                    },
+                    "image": {
+                        "$ref": "#/components/schemas/BaseModel/properties/image"
                     }
                 },
                 "type": "object",
